fixed overflow problem

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
 }
 html {
   font-size: 16px;
+  overflow-x: hidden;
 }
 body {
   font-family: "Bai Jamjuree", sans-serif;
